// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Proposals/List matches snapshot 1`] = `
<div
  className="makeStyles-root"
  id="Box"
>
  <div
    className="makeStyles-topContent"
  >
    <div
      className="makeStyles-total"
      id="Total"
      total="2"
    />
  </div>
  <div
    className="makeStyles-list"
  >
    <div
      className="List"
      onScroll={[Function]}
      style={
        {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 600,
          "overflow": "auto",
          "position": "relative",
          "width": 600,
          "willChange": "transform",
        }
      }
    >
      <div
        style={
          {
            "height": 200,
            "pointerEvents": undefined,
            "width": "100%",
          }
        }
      >
        <div
          style={
            {
              "height": 100,
              "left": 0,
              "position": "absolute",
              "right": undefined,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="makeStyles-root"
            >
              <div
                className="makeStyles-header"
              >
                <h4
                  className="MuiTypography-root MuiTypography-h4 makeStyles-id css-15yyl88-MuiTypography-root"
                >
                  #3
                </h4>
                <span
                  className="makeStyles-mobile"
                >
                  <div
                    className="makeStyles-root makeStyles-four"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
                    >
                      passed
                    </p>
                  </div>
                </span>
              </div>
              <div>
                <div
                  className="makeStyles-title"
                >
                  <a
                    className="MuiTypography-root MuiTypography-h3 value css-1kl9mnf-MuiTypography-root"
                    href="/proposals/3"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    Staking Param Change Part Three
                  </a>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 makeStyles-content css-1bkilrq-MuiTypography-root"
                >
                  Update max validators
                </p>
              </div>
              <span
                className="makeStyles-desktop"
              >
                <div
                  className="makeStyles-root makeStyles-four"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
                  >
                    passed
                  </p>
                </div>
              </span>
            </div>
            <hr
              className="MuiDivider-root MuiDivider-fullWidth css-l3fh2f-MuiDivider-root"
            />
          </div>
        </div>
        <div
          style={
            {
              "height": 100,
              "left": 0,
              "position": "absolute",
              "right": undefined,
              "top": 100,
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="makeStyles-root"
            >
              <div
                className="makeStyles-header"
              >
                <h4
                  className="MuiTypography-root MuiTypography-h4 makeStyles-id css-15yyl88-MuiTypography-root"
                >
                  #7
                </h4>
                <span
                  className="makeStyles-mobile"
                >
                  <div
                    className="makeStyles-root makeStyles-five"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
                    >
                      rejected
                    </p>
                  </div>
                </span>
              </div>
              <div>
                <div
                  className="makeStyles-title"
                >
                  <a
                    className="MuiTypography-root MuiTypography-h3 value css-1kl9mnf-MuiTypography-root"
                    href="/proposals/7"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    Staking Param Change Part Two
                  </a>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 makeStyles-content css-1bkilrq-MuiTypography-root"
                >
                  Update max validators
                </p>
              </div>
              <span
                className="makeStyles-desktop"
              >
                <div
                  className="makeStyles-root makeStyles-five"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
                  >
                    rejected
                  </p>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`screen: Proposals/List matches snapshot with empty proposal list 1`] = `
<div
  className="makeStyles-root"
  id="Box"
>
  <div
    className="makeStyles-topContent"
  >
    <div
      className="makeStyles-total"
      id="Total"
      total="0"
    />
  </div>
  <div
    className="makeStyles-list"
  >
    <div
      className="List"
      onScroll={[Function]}
      style={
        {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 600,
          "overflow": "auto",
          "position": "relative",
          "width": 600,
          "willChange": "transform",
        }
      }
    >
      <div
        style={
          {
            "height": 0,
            "pointerEvents": undefined,
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;
